Outliner Colored collection bug #80880

Closed
opened 2020-09-17 12:17:45 +02:00 by slowk1d · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-16 21:05, hash: 27660b3cd9
Worked: 2.9

Short description of error
If there is an object with a parent below a colored collection, also the line of the parent gets the same color, even if it's not part of the collection.
bugg.jpg

Exact steps for others to reproduce the error
Open Blender (latest 2.91 alpha), create three objects, put one in a collection, leaving the other two outside. Parent one of the remaining two to the other, then select the collection above the objects outside and color it.

outliner bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-16 21:05, hash: `27660b3cd9` Worked: 2.9 **Short description of error** If there is an object with a parent below a colored collection, also the line of the parent gets the same color, even if it's not part of the collection. ![bugg.jpg](https://archive.blender.org/developer/F8891891/bugg.jpg) **Exact steps for others to reproduce the error** Open Blender (latest 2.91 alpha), create three objects, put one in a collection, leaving the other two outside. Parent one of the remaining two to the other, then select the collection above the objects outside and color it. [outliner bug.blend](https://archive.blender.org/developer/F8891904/outliner_bug.blend)
Author

Added subscriber: @slowk1d

Added subscriber: @slowk1d

Added subscribers: @mano-wii, @natecraddock

Added subscribers: @mano-wii, @natecraddock

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

If I am not mistaken, this feature was added in 7b3d38a72d

If I am not mistaken, this feature was added in 7b3d38a72d
Nathan Craddock self-assigned this 2020-09-18 20:29:03 +02:00

This issue was referenced by 8ca698427f

This issue was referenced by 8ca698427fdcbabc60ca22bdfeb91e1e0ce1f5d0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80880
No description provided.